--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/tmp
-/out-tsc
+dist
+tmp
+out-tsc
 
 # dependencies
 node_modules
@@ -25,17 +25,17 @@ node_modules
 !.vscode/extensions.json
 
 # misc
-/.sass-cache
+.sass-cache
 /connect.lock
-/coverage
+coverage
 /libpeerconnection.log
 npm-debug.log
 testem.log
-/typings
+typings
 
 # e2e
-/e2e/*.js
-/e2e/*.map
+e2e/*.js
+e2e/*.map
 
 # System Files
 .DS_Store
