--- a/client/src/assets/icons/manifest.json
+++ b/client/src/assets/icons/manifest.json
@@ -1,5 +1,6 @@
 {
-    "name": "",
+    "name": "Điện Thủy Bình",
+    "short_name": "Electrical E-commerce",
     "icons": [
         {
             "src": "/assets/icons/android-chrome-192x192.png",
@@ -12,8 +13,8 @@
             "type": "image/png"
         }
     ],
-    "theme_color": "#ff0000",
-    "background_color": "#ff0000",
+    "theme_color": "#3f51b5",
+    "background_color": "#3f51b5",
     "display": "standalone",
     "orientation": "portrait"
 }
